--- a/Final Project/about.html
+++ b/Final Project/about.html
@@ -10,13 +10,17 @@
   <title>The Gospel of Jesus Christ</title>
 </head>
 <body>
-    <h1 class="site-title">✨ Welcome to Jesus & Friends! ✨</h1> 
+    <h1 class="site-title">✨ Learn About Jesus in a Fun Way! ✨</h1> 
     <header id="page-header">
         <div class="container"></div>
           <nav class="main-nav">
             <ul class="nav-list">
               <li><a href="../Final Project/index.html">Home</a></li>
-              <li><a href="../Final Project/about.html">About</a></li>
+              <li><a href="../Final Project/index1.html">Faith</a></li>
+              <li><a href="../Final Project/index2.html">Repentence</a></li>
+              <li><a href="../Final Project/index3.html">Baptism</a></li>
+              <li><a href="../Final Project/index4.html">Holy Ghost</a></li>
+              <li><a href="../Final Project/index5.html">Endure to the End</a></li>
               <li><a href="../Final Project/game.html">Game</a></li>
             </ul>
           </nav>
@@ -24,25 +28,10 @@
 
   <main>
 
-    <section class="container pic">
-        <img src="../Final Project/jc1.jpg" alt="Jesus with children" class="hero-img">
-        <h2>Welcome to the Gospel of Jesus Christ</h2>
-        <p>Learn and grow through faith, fun, and family.</p>
-    </section>
-
-
 
     <section class="container chapters-summary">
-        <h2>📘 Gospel Chapters</h2>
-        <div class="chapters">
-          <ul>
-            <li><a href="index1.html">Faith in Jesus Christ</a></li>
-            <li><a href="index2.html">Repentance</a></li>
-            <li><a href="index3.html">Baptism</a></li>
-            <li><a href="index4.html">Gift of the Holy Ghost</a></li>
-            <li><a href="index5.html">Endure to the End</a></li>
-          </ul>
-        </div>
+        <h2>📖 What You'll Learn</h2>
+        <p>Our website helps children understand the gospel of Jesus Christ with joy! Each chapter teaches an important principle in simple, fun ways.</p>
       </section>
 
     <section class="container ai-game-section">
@@ -55,16 +44,18 @@
 
 
     <section class="pic">
-        <h3>🎬 Learn Through Video</h3>
-        <iframe class="video-frame" width="300" height="170"
-          src="https://www.youtube.com/embed/sz81dIfwf4Y"
-          title="Bible Story for Kids"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-        </iframe>
-      </section>
+      <h3>Watch the video</h3>
+      <iframe class="pic video-frame"
+      width="560" 
+      height="315"
+      src=""
+      title=""
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+    </section>
 
-      <section class="floated-image-section container">
+    <section class="floated-image-section container">
         <h3>💖 Learn with Jesus</h3>
         <img src="" alt="Jesus Christ" class="float-img" />
         <p>
@@ -72,22 +63,18 @@
         </p>
       </section>
 
-    <section class="grid-demo">
-        <h2>🌟 Fun Learning Blocks</h2>
-        <p>Each block reminds us of something important Jesus taught:</p>
+    <section class="grid-demo container">
+        <h2>🎯 Fun Gospel Topics</h2>
+        <p>Just like Jesus helps us stay on track, our lessons snap into place like puzzle pieces!</p>
         <div class="grid-container">
-          <div class="grid-item">📖 Scripture</div>
-          <div class="grid-item">🙏 Prayer</div>
-          <div class="grid-item">🧡 Love</div>
-          <div class="grid-item">😇 Kindness</div>
-          <div class="grid-item">🎵 Songs</div>
-          <div class="grid-item">🕊️ Peace</div>
+          <div class="grid-item">📖 Faith</div>
+          <div class="grid-item">💧 Baptism</div>
+          <div class="grid-item">🎁 Holy Ghost</div>
+          <div class="grid-item">🔁 Repentance</div>
+          <div class="grid-item">🚶 Endurance</div>
+          <div class="grid-item">💬 Prayer</div>
         </div>
       </section>
-  
-
-
-
 
   </main>
 
