--- a/Final/about.html
+++ b/Final/about.html
@@ -15,13 +15,13 @@
         <div class="container"></div>
           <nav class="main-nav">
             <ul class="nav-list">
-              <li><a href="../Final Project/index.html">Home</a></li>
-              <li><a href="../Final Project/index1.html">Faith</a></li>
-              <li><a href="../Final Project/index2.html">Repentence</a></li>
-              <li><a href="../Final Project/index3.html">Baptism</a></li>
-              <li><a href="../Final Project/index4.html">Holy Ghost</a></li>
-              <li><a href="../Final Project/index5.html">Endure to the End</a></li>
-              <li><a href="../Final Project/game.html">Game</a></li>
+              <li><a href="../Final/index.html">Home</a></li>
+              <li><a href="../Final/index1.html">Faith</a></li>
+              <li><a href="../Final/index2.html">Repentence</a></li>
+              <li><a href="../Final/index3.html">Baptism</a></li>
+              <li><a href="../Final/index4.html">Holy Ghost</a></li>
+              <li><a href="../Final/index5.html">Endure to the End</a></li>
+              <li><a href="../Final/game.html">Game</a></li>
             </ul>
           </nav>
     </header> 
