--- a/Final/index.html
+++ b/Final/index.html
@@ -15,9 +15,9 @@
         <div class="container"></div>
           <nav class="main-nav">
             <ul class="nav-list">
-              <li><a href="../Final Project/index.html">Home</a></li>
-              <li><a href="../Final Project/about.html">About</a></li>
-              <li><a href="../Final Project/game.html">Game</a></li>
+              <li><a href="../Final/index.html">Home</a></li>
+              <li><a href="../Final/about.html">About</a></li>
+              <li><a href="../Final/game.html">Game</a></li>
             </ul>
           </nav>
     </header> 
