--- a/Final/index.html
+++ b/Final/index.html
@@ -25,7 +25,7 @@
   <main>
 
     <section class="container pic">
-        <img src="../Final Project/jc1.jpg" alt="Jesus with children" class="hero-img">
+        <img src="../Final/jc1.jpg" alt="Jesus with children" class="hero-img">
         <h2>Welcome to the Gospel of Jesus Christ</h2>
         <p>Learn and grow through faith, fun, and family.</p>
     </section>
