--- a/Final/index.html
+++ b/Final/index.html
@@ -48,7 +48,7 @@
     <section class="container ai-game-section">
         <h2>🧠 AI Game - Coming Soon!</h2>
         <p>Our fun AI game is almost ready. You'll be able to answer questions and get fun feedback!</p>
-        <input type="text" placeholder="Ask a question..." />
+        <input type="text" placeholder="Ask a question...">
         <button>Submit</button>
     </section>
 
@@ -66,7 +66,7 @@
 
       <section class="floated-image-section container">
         <h3>💖 Learn with Jesus</h3>
-        <img src="" alt="Jesus Christ" class="float-img" />
+        <img src="../Final/jc2.avif" alt="Jesus Christ" class="float-img">
         <p>
           Jesus Christ taught us through stories and love. Soon, you’ll be able to learn through a game that’s fun and full of faith!
         </p>
