--- a/Final/about.html
+++ b/Final/about.html
@@ -16,11 +16,7 @@
           <nav class="main-nav">
             <ul class="nav-list">
               <li><a href="../Final/index.html">Home</a></li>
-              <li><a href="../Final/index1.html">Faith</a></li>
-              <li><a href="../Final/index2.html">Repentence</a></li>
-              <li><a href="../Final/index3.html">Baptism</a></li>
-              <li><a href="../Final/index4.html">Holy Ghost</a></li>
-              <li><a href="../Final/index5.html">Endure to the End</a></li>
+              <li><a href="../Final/about.html">About</a></li>
               <li><a href="../Final/game.html">Game</a></li>
             </ul>
           </nav>
@@ -32,6 +28,15 @@
     <section class="container chapters-summary">
         <h2>📖 What You'll Learn</h2>
         <p>Our website helps children understand the gospel of Jesus Christ with joy! Each chapter teaches an important principle in simple, fun ways.</p>
+        <div class="chapters">
+          <ul class="jc-list">
+            <li><a href="index1.html">Faith in Jesus Christ</a></li>
+            <li><a href="index2.html">Repentance</a></li>
+            <li><a href="index3.html">Baptism</a></li>
+            <li><a href="index4.html">Gift of the Holy Ghost</a></li>
+            <li><a href="index5.html">Endure to the End</a></li>
+          </ul>
+        </div>
       </section>
 
     <section class="container ai-game-section">
@@ -44,24 +49,22 @@
 
 
     <section class="pic">
-      <h3>Watch the video</h3>
-      <iframe class="pic video-frame"
-      width="560" 
-      height="315"
-      src=""
-      title=""
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen>
-    </iframe>
+      <h3>🎬 Learn Through Video</h3>
+      <iframe class="video-frame" width="300" height="170"
+        src="https://www.youtube.com/embed/qH5HIPl0hRo"
+        title="Who is Jesus? A Bible Story for Children"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
     </section>
 
     <section class="floated-image-section container">
-        <h3>💖 Learn with Jesus</h3>
-        <img src="" alt="Jesus Christ" class="float-img" />
-        <p>
-          Jesus Christ taught us through stories and love. Soon, you’ll be able to learn through a game that’s fun and full of faith!
-        </p>
-      </section>
+      <h3>💖 Learn with Jesus</h3>
+      <img src="../Final/jc2.avif" alt="Jesus Christ" class="float-img">
+      <p>
+        Jesus Christ taught us through stories and love. Soon, you’ll be able to learn through a game that’s fun and full of faith!
+      </p>
+    </section>
 
     <section class="grid-demo container">
         <h2>🎯 Fun Gospel Topics</h2>
