--- a/Final/index.html
+++ b/Final/index.html
@@ -10,8 +10,8 @@
   <title>The Gospel of Jesus Christ</title>
 </head>
 <body>
-    <h1 class="site-title">✨ Welcome to Jesus & Friends! ✨</h1> 
     <header id="page-header">
+      <h1 class="site-title">✨ Welcome to Jesus & Friends! ✨</h1> 
         <div class="container"></div>
           <nav class="main-nav">
             <ul class="nav-list">
@@ -35,7 +35,7 @@
     <section class="container chapters-summary">
         <h2>📘 Gospel Chapters</h2>
         <div class="chapters">
-          <ul>
+          <ul class="jc-list">
             <li><a href="index1.html">Faith in Jesus Christ</a></li>
             <li><a href="index2.html">Repentance</a></li>
             <li><a href="index3.html">Baptism</a></li>
@@ -55,14 +55,14 @@
 
 
     <section class="pic">
-        <h3>🎬 Learn Through Video</h3>
-        <iframe class="video-frame" width="300" height="170"
-          src="https://www.youtube.com/embed/sz81dIfwf4Y"
-          title="Bible Story for Kids"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-        </iframe>
-      </section>
+      <h3>🎬 Learn Through Video</h3>
+      <iframe class="video-frame" width="300" height="170"
+        src="https://www.youtube.com/embed/qH5HIPl0hRo"
+        title="Who is Jesus? A Bible Story for Children"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </section>
 
       <section class="floated-image-section container">
         <h3>💖 Learn with Jesus</h3>
