--- a/Final/about.html
+++ b/Final/about.html
@@ -10,8 +10,8 @@
   <title>The Gospel of Jesus Christ</title>
 </head>
 <body>
-    <h1 class="site-title">✨ Learn About Jesus in a Fun Way! ✨</h1> 
     <header id="page-header">
+      <h1 class="site-title">✨ Welcome to Jesus & Friends! ✨</h1> 
         <div class="container"></div>
           <nav class="main-nav">
             <ul class="nav-list">
@@ -37,20 +37,15 @@
             <li><a href="index5.html">Endure to the End</a></li>
           </ul>
         </div>
-      </section>
-
-    <section class="container ai-game-section">
-        <h2>🧠 AI Game - Coming Soon!</h2>
-        <p>Our fun AI game is almost ready. You'll be able to answer questions and get fun feedback!</p>
-        <input type="text" placeholder="Ask a question..." />
-        <button>Submit</button>
     </section>
+
+
 
 
 
     <section class="pic">
       <h3>🎬 Learn Through Video</h3>
-      <iframe class="video-frame" width="300" height="170"
+      <iframe class="pic video-frame" width="300" height="170"
         src="https://www.youtube.com/embed/qH5HIPl0hRo"
         title="Who is Jesus? A Bible Story for Children"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -70,14 +65,23 @@
         <h2>🎯 Fun Gospel Topics</h2>
         <p>Just like Jesus helps us stay on track, our lessons snap into place like puzzle pieces!</p>
         <div class="grid-container">
-          <div class="grid-item">📖 Faith</div>
-          <div class="grid-item">💧 Baptism</div>
-          <div class="grid-item">🎁 Holy Ghost</div>
-          <div class="grid-item">🔁 Repentance</div>
-          <div class="grid-item">🚶 Endurance</div>
-          <div class="grid-item">💬 Prayer</div>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/faith" target="_blank">📖 Faith</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/baptism" target="_blank">💧 Baptism</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/holy-ghost" target="_blank">🎁 Holy Ghost</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/repentance" target="_blank">🔁 Repentance</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/endurance" target="_blank">🚶 Endurance</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/prayer" target="_blank">💬 Prayer</a>
         </div>
-      </section>
+        This will make each topic in your grid link directly to its corresponding page in the Gospel Library.
+        
+        Related
+        What is the direct link to the gospel topic Faith on the Gospel Library website
+        How can I access detailed information about Baptism through the Gospel Library links
+        Where can I find resources about Holy Ghost in the Gospel Topics section
+        What URL leads to teachings on Repentance in the Gospel Library site
+        How do I navigate to Endurance topics within the Gospel Library online
+        
+    </section>
 
   </main>
 
