--- a/Final/index.html
+++ b/Final/index.html
@@ -22,7 +22,7 @@
           </nav>
     </header> 
 
-  <main>
+
 
     <section class="container pic">
         <img src="../Final/jc1.jpg" alt="Jesus with children" class="hero-img">
@@ -30,10 +30,11 @@
         <p>Learn and grow through faith, fun, and family.</p>
     </section>
 
-
+  <main>
 
     <section class="container chapters-summary">
         <h2>📘 Gospel Chapters</h2>
+        <p>Our website helps children understand the gospel of Jesus Christ with joy! Each chapter teaches an important principle in simple, fun ways.</p>
         <div class="chapters">
           <ul class="jc-list">
             <li><a href="index1.html">Faith in Jesus Christ</a></li>
@@ -43,20 +44,13 @@
             <li><a href="index5.html">Endure to the End</a></li>
           </ul>
         </div>
-      </section>
-
-    <section class="container ai-game-section">
-        <h2>🧠 AI Game - Coming Soon!</h2>
-        <p>Our fun AI game is almost ready. You'll be able to answer questions and get fun feedback!</p>
-        <input type="text" placeholder="Ask a question...">
-        <button>Submit</button>
     </section>
 
 
 
     <section class="pic">
       <h3>🎬 Learn Through Video</h3>
-      <iframe class="video-frame" width="300" height="170"
+      <iframe class="pic video-frame"width="300" height="170"
         src="https://www.youtube.com/embed/qH5HIPl0hRo"
         title="Who is Jesus? A Bible Story for Children"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -84,22 +78,11 @@
           <div class="grid-item">🕊️ Peace</div>
         </div>
       </section>
-  
-
-
-
-
   </main>
 
-
-
-
-
   
-  <footer style="background-color: #4979ea;">
-    <blockquote cite="">
-        
-      </blockquote>
+  <footer>
+
 
 
     <p>Created by Naoto Calip &copy; 2025</p>
