--- a/Final/index1.html
+++ b/Final/index1.html
@@ -14,6 +14,7 @@
     <h2>Discover the Power of Faith</h2> 
     <nav>
       <ul class="nav-list">
+        <li><a href="../Final/index.html">Home</a></li>
         <li><a href="../Final/index1.html">Faith</a></li>
         <li><a href="../Final/index2.html">Repentance</a></li>
         <li><a href="../Final/index3.html">Baptism</a></li>
@@ -26,26 +27,25 @@
 
   <main>
     <section class="section-bg">
-
-      <header>
+    <header>
       <h1 class="sub-heading">What is Faith?</h1>
         <figure>
         <div class="row">
           <div class="column">
             <img src="faith2.jpg" alt="quote"
             
-            width="500">
+            width="400">
           </div>
           <div class="column"><img src="teaching.jpg" alt="the picture of Tokyo station"
             
-            width="500">
+            width="400">
           </div>
 
             <figcaption>Figure 1: Faith brings us closer to Jesus Christ.</figcaption>
           </div>
         </div>
         </figure>
-      </header>
+    </header>
 
       <p>
         Faith in Jesus Christ means trusting Him, believing in His teachings, and following His example. It is more than just passive belief; it is shown by the way we live and the choices we make each day[1][2][3].
