--- a/Final/index.html
+++ b/Final/index.html
@@ -70,14 +70,15 @@
         <h2>🌟 Fun Learning Blocks</h2>
         <p>Each block reminds us of something important Jesus taught:</p>
         <div class="grid-container">
-          <div class="grid-item">📖 Scripture</div>
-          <div class="grid-item">🙏 Prayer</div>
-          <div class="grid-item">🧡 Love</div>
-          <div class="grid-item">😇 Kindness</div>
-          <div class="grid-item">🎵 Songs</div>
-          <div class="grid-item">🕊️ Peace</div>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">📖 Scripture</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/prayer" target="_blank">🙏 Prayer</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/love" target="_blank">🧡 Love</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/kindness" target="_blank">😇 Kindness</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/music/library/hymns" target="_blank">🎵 Songs</a>
+          <a class="grid-item" href="https://www.churchofjesuschrist.org/study/manual/gospel-topics/peace" target="_blank">🕊️ Peace</a>
         </div>
-      </section>
+        
+    </section>
   </main>
 
   
