--- a/Final/index2.html
+++ b/Final/index2.html
@@ -57,8 +57,8 @@
         When we repent, we recognize our mistakes, feel sincere sorrow, and turn to God for forgiveness.
       </p>
       <blockquote cite="https://www.churchofjesuschrist.org/study/scriptures/bofm/mosiah/26?lang=eng&id=p30#p30" class="quote">
-        <em>“Yea, and as often as my people repent will I forgive them their trespasses against me.”<br>
-        — Mosiah 26:30, Book of Mormon</em>
+        <em>“Yea, and as often as my people repent will I forgive them their trespasses against me.”<br><nav><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/mosiah/26?lang=eng&id=p30#p30">
+        — Mosiah 26:30, Book of Mormon</a></nav></em>
       </blockquote>
       <p>
         Through repentance, we can find peace, healing, and a fresh start—no matter what has happened in the past.
