--- a/Final/index3.html
+++ b/Final/index3.html
@@ -54,7 +54,7 @@
       </p>
       <blockquote cite="https://www.churchofjesuschrist.org/study/scriptures/bofm/mosiah/18.8,10?lang=eng" class="quote">
         <em>“... as ye are desirous to come into the fold of God, and to be called his people, ... what have you against being baptized in the name of the Lord, as a witness before him that ye have entered into a covenant with him, that ye will serve him and keep his commandments, that he may pour out his Spirit more abundantly upon you?”<br>
-        — Mosiah 18:8, 10, Book of Mormon</em>
+        <nav><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/mosiah/18.8,10?lang=eng">— Mosiah 18:8, 10, Book of Mormon</a></nav></em>
       </blockquote>
       <p>
         Baptism is a joyful step on the path to becoming more like Jesus Christ.
