--- a/Final/index5.html
+++ b/Final/index5.html
@@ -55,7 +55,7 @@
       </p>
       <blockquote cite="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/31.20?lang=eng" class="quote">
         <em>“Wherefore, ye must press forward with a steadfastness in Christ, having a perfect brightness of hope, and a love of God and of all men. Wherefore, if ye shall press forward, feasting upon the word of Christ, and endure to the end, behold, thus saith the Father: Ye shall have eternal life.”<br>
-        — 2 Nephi 31:20, Book of Mormon</em>
+        <nav><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/31.20?lang=eng">— 2 Nephi 31:20, Book of Mormon</a></nav></em>
       </blockquote>
       <p>
         Enduring to the end is not just surviving—it's choosing to follow Jesus Christ every day and trusting in His promises.
