--- a/Final/index4.html
+++ b/Final/index4.html
@@ -56,7 +56,7 @@
       </p>
       <blockquote cite="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/32.5?lang=eng" class="quote">
         <em>“For behold, again I say unto you that if ye will enter in by the way, and receive the Holy Ghost, it will show unto you all things what ye should do.”<br>
-        — 2 Nephi 32:5, Book of Mormon</em>
+        <nav><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/32.5?lang=eng">— 2 Nephi 32:5, Book of Mormon</a></nav></em>
       </blockquote>
       <p>
         As we listen to the promptings of the Holy Ghost, we can make good choices and draw closer to Jesus Christ.
