--- a/Final/about.html
+++ b/Final/about.html
@@ -18,6 +18,7 @@
               <li><a href="../Final/index.html">Home</a></li>
               <li><a href="../Final/about.html">About</a></li>
               <li><a href="../Final/game.html">Game</a></li>
+              <li><a href="../Final/feed.html">Feedback</a></li>
             </ul>
           </nav>
     </header> 
